--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 
 body {
-    background-color: #FAFAFA;
+    background-image: url(/imgs/background-img.png);
+    font-family: 'Lato', sans-serif;
+}
+
+/* UNIVERSALES*/
+html {
+    box-sizing: border-box;
+  }
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 .content-container {
@@ -36,3 +45,338 @@ body {
     margin-top: 3rem;
     align-self: center;
 }
+
+header {
+    background-color: #FAD12D;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+    z-index: 200;
+}
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1480px;
+    width: 100%;
+    height: 100px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.nav-item {
+    padding: 45px 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+.nav-item a {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.slider {
+    margin-top: 100px;
+}
+.carousel-cell {
+    height: calc(100vh - 100px);
+    position: relative;
+    text-align: center;
+}
+
+.section {
+    max-width: 1400px;
+    margin: 60px auto 0;
+    text-align: center;
+}
+
+.proposito {
+    max-width: 700px;
+}
+
+.section h2 {
+    color: #FAD12D;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.section p {
+    color: #FFF;
+    font-size: 30px;
+}
+
+.button {
+    background-color: #FAD12D;
+    border: none;
+    font-size: 20px;
+    padding: 15px 15px;
+    border-radius: 10px;
+    margin: 30px 0;
+    display: block;
+    transition: 0.2s ease-in;
+}
+
+.button:hover {
+    color: #000;
+    padding: 18px;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.overlay {
+    position: fixed;
+    background-color: rgba(0,0,0,0.6);
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.overlay .textBox-container {
+    width: 500px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFF;
+    text-align: center;
+    font-size: 25px;
+    border-radius: 10px;
+}
+.fixed {
+    overflow: hidden;
+}
+
+.success-checkmark {
+    width: 80px;
+    height: 115px;
+    margin: 0 auto;
+  }
+  .success-checkmark .check-icon {
+    width: 80px;
+    height: 80px;
+    position: relative;
+    border-radius: 50%;
+    box-sizing: content-box;
+    border: 4px solid #4caf50;
+  }
+  .success-checkmark .check-icon::before {
+    top: 3px;
+    left: -2px;
+    width: 30px;
+    transform-origin: 100% 50%;
+    border-radius: 100px 0 0 100px;
+  }
+  .success-checkmark .check-icon::after {
+    top: 0;
+    left: 30px;
+    width: 60px;
+    transform-origin: 0 50%;
+    border-radius: 0 100px 100px 0;
+    animation: rotate-circle 4.25s ease-in;
+  }
+  .success-checkmark .check-icon::before, .success-checkmark .check-icon::after {
+    content: "";
+    height: 100px;
+    position: absolute;
+    transform: rotate(-45deg);
+  }
+  .success-checkmark .check-icon .icon-line {
+    height: 5px;
+    background-color: #4caf50;
+    display: block;
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+  }
+  .success-checkmark .check-icon .icon-line.line-tip {
+    top: 46px;
+    left: 14px;
+    width: 25px;
+    transform: rotate(45deg);
+    animation: icon-line-tip 0.75s;
+    z-index: 20;
+  }
+  .success-checkmark .check-icon .icon-line.line-long {
+    top: 38px;
+    right: 8px;
+    width: 47px;
+    transform: rotate(-45deg);
+    animation: icon-line-long 0.75s;
+    z-index: 20;
+  }
+  .success-checkmark .check-icon .icon-circle {
+    top: -4px;
+    left: -4px;
+    z-index: 10;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    position: absolute;
+    box-sizing: content-box;
+    border: 4px solid rgba(76, 175, 80);
+  }
+  .success-checkmark .check-icon .icon-fix {
+    top: 8px;
+    width: 5px;
+    left: 26px;
+    z-index: 1;
+    height: 85px;
+    position: absolute;
+    transform: rotate(-45deg);
+  }
+  
+  @keyframes rotate-circle {
+    0% {
+      transform: rotate(-45deg);
+    }
+    5% {
+      transform: rotate(-45deg);
+    }
+    12% {
+      transform: rotate(-405deg);
+    }
+    100% {
+      transform: rotate(-405deg);
+    }
+  }
+  @keyframes icon-line-tip {
+    0% {
+      width: 0;
+      left: 1px;
+      top: 19px;
+    }
+    54% {
+      width: 0;
+      left: 1px;
+      top: 19px;
+    }
+    70% {
+      width: 50px;
+      left: -8px;
+      top: 37px;
+    }
+    84% {
+      width: 17px;
+      left: 21px;
+      top: 48px;
+    }
+    100% {
+      width: 25px;
+      left: 14px;
+      top: 45px;
+    }
+  }
+  @keyframes icon-line-long {
+    0% {
+      width: 0;
+      right: 46px;
+      top: 54px;
+    }
+    65% {
+      width: 0;
+      right: 46px;
+      top: 54px;
+    }
+    84% {
+      width: 55px;
+      right: 0px;
+      top: 35px;
+    }
+    100% {
+      width: 47px;
+      right: 8px;
+      top: 38px;
+    }
+  }
+
+  .error-banmark {
+    width: 80px;
+    height: 115px;
+    margin: 0 auto;
+  }
+  .error-banmark .ban-icon {
+    width: 80px;
+    height: 80px;
+    position: relative;
+    border-radius: 50%;
+    box-sizing: content-box;
+    border: 4px solid #af4c4c;
+  }
+  .error-banmark .ban-icon::before {
+    top: 3px;
+    left: -2px;
+    width: 30px;
+    transform-origin: 100% 50%;
+    border-radius: 100px 0 0 100px;
+  }
+  .error-banmark .ban-icon::after {
+    top: 0;
+    left: 30px;
+    width: 60px;
+    transform-origin: 0 50%;
+    border-radius: 0 100px 100px 0;
+    animation: rotate-circle 4.25s ease-in;
+  }
+  .error-banmark .ban-icon::before, .error-banmark .ban-icon::after {
+    content: "";
+    height: 100px;
+    position: absolute;
+    background: rgba(255, 255, 255, 0);
+    transform: rotate(-45deg);
+  }
+  .error-banmark .ban-icon .icon-line {
+    height: 5px;
+    background-color: #af4c4c;
+    display: block;
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+  }
+  .error-banmark .ban-icon .icon-line.line-long-invert {
+    top: 39px;
+    left: 8px;
+    width: 60px;
+    transform: rotate(45deg);
+    animation: icon-line-long 0.75s;
+  }
+  .error-banmark .ban-icon .icon-line.line-long {
+    top: 39px;
+    left: 8px;
+    width: 60px;
+    transform: rotate(-45deg);
+    animation: icon-line-long 0.85s;
+  }
+  .error-banmark .ban-icon .icon-circle {
+    top: -4px;
+    left: -4px;
+    z-index: 10;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    position: absolute;
+    box-sizing: content-box;
+    border: 4px solid rgba(175, 76, 76, 0.5);
+  }
+  .error-banmark .ban-icon .icon-fix {
+    top: 8px;
+    width: 5px;
+    left: 26px;
+    z-index: 1;
+    height: 85px;
+    position: absolute;
+    transform: rotate(-45deg);
+    background-color: rgba(255, 255, 255, 0);
+  }
